# tt-metrics-exporter

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
deploy/kubernetes/base/: daemonset.yaml  kustomization.yaml  network-policy.yaml  service-account.yaml  service.yaml
deploy/kubernetes/components/production/: patch.yaml
deploy/kubernetes/monitoring/: dashboard.json  kustomization.yaml  prometheus-rules.yaml  service-monitor.yaml
deploy/kubernetes/overlays/production/: kustomization.yaml
deploy/kubernetes/overlays/ttsim/: kustomization.yaml  patch.yaml
docs/: README.md  VERSIONING.md
docs/decisions/: 0002-profiler-state-isolation.md  0003-prometheus-client-compatibility.md
docs/guides/: HOW_IT_WORKS.md  TT_METRICS_EXPORTER.md
docs/info/: CONTAINER.md  KUBERNETES.md  METRIC_COMPATIBILITY.md  OPERATIONAL_CONTRACT.md  STATE_INGESTION_SECURITY.md
docs/runbooks/: device-health.md  exporter.md  http.md  profiler.md
docs/schema/: telemetry.tenstorrent.com-v1.schema.json
include/tt_metrics_exporter/: device.hpp  http_server.hpp  json.hpp  metrics.hpp
integrations/ttnn/: README.md  example_dynamic_workload.py  metalium_profiler_publisher.py  pyproject.toml
scripts/: README.md
scripts/ci/: check_docs.py  run_tests.py
scripts/operations/: soak_test.py
scripts/validation/: image.sh  kind-calico.yaml  kind_network_policy.sh  kind_rollout.sh  manifests.py  manifests.sh  monitoring.py  monitoring.sh  prometheus-rule-tests.yaml  soak.sh  vm.sh
src/: device.cpp  http_server.cpp  json.cpp  main.cpp  metrics.cpp
src/tt_metrics_exporter/: __init__.py  __main__.py  _version.py  models.py
src/tt_metrics_exporter/app/: __init__.py  cli.py  http.py  logging.py  runtime.py  snapshot.py
src/tt_metrics_exporter/collection/: __init__.py  collector.py  device_resources.py  parsers.py  secure_io.py  state.py  sysfs_io.py
src/tt_metrics_exporter/renderers/: __init__.py  json.py  prometheus.py
tests/: README.md  metalium_profiler_publisher_test.py  sysfs_collector_test.cpp
tests/fixtures/corpus/memory/: regression-units.txt
tests/fixtures/corpus/pci/: regression-overflow.txt
tests/integration/: test_cli.py  test_http.py  test_lifecycle.py  test_logging_process.py
tests/support/: run_exporter.py
tests/unit/: test_collector.py  test_logging.py  test_parsers.py  test_profiler_publisher.py  test_renderers.py  test_runtime.py  test_soak.py
