[build-system]
requires = ["setuptools>=66.1", "wheel>=0.38.4"]
build-backend = "setuptools.build_meta"

[project]
name = "tt-metrics-exporter"
dynamic = ["version"]
description = "Node-local Tenstorrent telemetry exporter"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "NOASSERTION"}
dependencies = [
    "click>=8.1,<9",
    "starlette>=0.47,<1",
    "uvicorn>=0.34,<1",
]

[project.scripts]
tt-metrics-exporter = "tt_metrics_exporter.app.cli:main"

[dependency-groups]
dev = [
    "build>=1,<2",
    "httpx>=0.27,<1",
    "jsonschema>=4.18,<5",
    "pytest>=8,<10",
    "pytest-cov>=5,<8",
    "pyyaml>=6,<7",
    "ruff>=0.9,<1",
    "setuptools==75.8.0",
    "wheel==0.45.1",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
python_files = ["test_*.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 10000
target-version = "py310"

[tool.ruff.lint]
select = ["E7", "E9", "F"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tt_metrics_exporter*"]

[tool.setuptools.dynamic]
version = {attr = "tt_metrics_exporter._version.__version__"}
